[package]
name = "poc-ddos-xdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
memoffset = "0.9.1"
network-types = "0.0.6"
poc-ddos-xdp-common = { path = "../poc-ddos-xdp-common" }

[[bin]]
name = "poc-ddos-xdp"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
